# Novel_Writer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.tmp/bilibili_transcripts/: BV1SrdxYKEbP.faster-whisper.transcript.srt  BV1SrdxYKEbP.faster-whisper.transcript.txt
books/mist_road_rv/: book.yaml
books/sample_tomato_project/: book.yaml
books/xiuxian_shop_pilot/: book.yaml
docs/: project_status.md
docs/vision/: ultimate-novel-writer-roadmap.md
docs/workflows/: eval-testing.md  human-approval-checkpoints.md  manual-single-chapter-pipeline.md  (+9 more)
engine/: acceptance_packet.py  book_factory.py  brief_contract.py  chapter_acceptance.py  cli.py  context_builder.py  craft_contract.py  craft_knowledge.py  drift_report.py  eval_runner.py  hardening.py  html_utils.py  io_utils.py  outline_approval_packet.py  outline_gate.py  outline_map_review.py  outline_resolver.py  paths.py  pending_approvals.py  pipeline.py  reader_panel.py  style_knowledge.py  trace_eval_runner.py  v3_migration.py  v3_state.py  validators.py
tests/: test_acceptance_packet.py  test_book_factory.py  test_brief_contract.py  test_chapter_acceptance.py  test_cli.py  test_context_builder.py  test_craft_contract.py  test_craft_knowledge.py  test_docs_architecture.py  test_drift_report.py  test_eval_runner.py  test_io_utils.py  test_outline_approval_packet.py  test_outline_gate.py  test_outline_map_review.py  test_pending_approvals.py  test_pipeline.py  test_reader_panel.py  test_style_knowledge.py  test_trace_eval_runner.py  test_v3_migration.py  test_v3_state.py  test_validators.py
(+677 files in other folders)
